# arkhe

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  fix_doc.py  project.yml  pyproject.toml
.nestifypy/cache/: currency.json
docs/: collections.md  console.md  core.md  database.md  decorators.md  env.md  flow.md  ignite.md  input.md  io.md  json.md  komodo.md  loom.md  math.md  modifier.md  net.md  oop.md  os.md  promise.md  pyunix.md  scheduler.md  slogger.md  trying.md  yaml.md
docs/architecture/: pyunix_new_architecture.md
examples/: example_platformer.py  flappybird.py  pyunix_demo.py  quickstart.py  simple_game.py
saves/: save_1.json
src/arkhe/: __init__.py  cli.py
src/arkhe/collections/: __init__.py  bi_map.py  hash_map.py  linked_list.py  ordered_set.py  stack.py  stream.py  unmodifiable.py
src/arkhe/database/: __init__.py  _connection.py  _meta.py
src/arkhe/decorators/: __init__.py
src/arkhe/ensure/: exceptions.py
src/arkhe/env/: __init__.py
src/arkhe/ignite/config/: __init__.py
src/arkhe/ignite/core/: container.py
src/arkhe/ignite/decorators/: __init__.py  bean.py  component.py  event_listener.py  inject.py  service.py
src/arkhe/ignite/di/: __init__.py  injector.py
src/arkhe/ignite/scheduler/: __init__.py
src/arkhe/ignite/tests/: test_container.py
src/arkhe/input/: __init__.py  history.py  sanitize.py  types.py  validators.py
src/arkhe/json/: __init__.py  decorators.py  engine.py  exceptions.py  models.py  utils.py  validator.py
src/arkhe/komodo/: __init__.py  __init__.pyi  access_level.py  ast_engine.py  core.py  inspect.py
src/arkhe/komodo/ast_generators/: __init__.py  accessors.py  builder.py  constructor.py  copyable.py  immutable.py  logger.py  repr.py  utils.py
src/arkhe/loom/: __init__.py  ast_nodes.py  lexer.py  parser.py  providers.py  resolver.py  runtime.py  scope.py
src/arkhe/math/: _engine.py  _linalg.py
src/arkhe/net/: __init__.py  decorators.py  net.py
src/arkhe/os/: __init__.py  system.py
src/arkhe/patterns/: core.py
src/arkhe/promise/: promise.py
src/arkhe/pyunix/: animation.py  app.py  assets.py  events.py  exceptions.py  input.py  math.py  sprite.py  timer.py  tween.py  window.py
src/arkhe/pyunix/core/: _surface.py
src/arkhe/pyunix/entity/: component.py
src/arkhe/pyunix/render/: draw.py
src/arkhe/result/: __init__.py
src/arkhe/slogger/: __init__.py  slogger.py
src/arkhe/trying/: trying.py
src/arkhe/types/: __init__.py
src/arkhe/utils/: __init__.py  optional.py
src/arkhe/yaml/: __init__.py  engine.py  exceptions.py  metadata.py  models.py  proxy.py  registry.py  scanner.py
src/nestify/: __init__.py  cli.py
src/nestify/collections/: __init__.py  array_list.py  hash_map.py  linked_list.py  ordered_set.py  queue.py  stack.py
src/nestify/console/: __init__.py
src/nestify/core/: __init__.py
src/nestify/decorators/: __init__.py
src/nestify/flow/: __init__.py
src/nestify/json/: __init__.py  engine.py  exceptions.py  models.py  parser.py  serializer.py  utils.py  validator.py
src/nestify/os/: __init__.py  dirs.py  files.py  paths.py  process.py  system.py
src/nestify/pyunix/: __init__.py  app.py  assets.py  audio.py  camera.py  events.py  exceptions.py  fonts.py  input.py  physics.py  scene.py  sprite.py  text.py  timer.py  window.py
src/nestify/types/: __init__.py
src/nestify/utils/: __init__.py
src/nestify/yaml/: __init__.py  bootstrap.py  cache.py  engine.py  exceptions.py  metadata.py  models.py  proxy.py  registry.py  runtime.py  scanner.py  watcher.py
src/nestifypy/: cli.py
src/nestifypy/collections/: __init__.py  bi_map.py  circular_buffer.py  immutable_list.py  multi_map.py  priority_queue.py  stream.py  unmodifiable.py
src/nestifypy/ensure/: __init__.py  chain.py  core.py  exceptions.py
src/nestifypy/env/: __init__.py
src/nestifypy/ignite/: __init__.py
src/nestifypy/input/: core.py  types.py  validators.py
src/nestifypy/json/: decorators.py
src/nestifypy/komodo/: __init__.py  __init__.pyi  ast_builders.py  ast_engine.py  core.py  inspect.py  stub_generator.py
src/nestifypy/loom/: __init__.py  ast_nodes.py  exceptions.py  lexer.py  parser.py  providers.py  resolver.py  runtime.py  schema.py  scope.py  test_loom.py
src/nestifypy/math/: __init__.py  _engine.py  _geometry.py  _linalg.py  _money.py  _symbolic.py  _types.py  _units.py
src/nestifypy/net/: __init__.py  net.py
src/nestifypy/oop/: __init__.py  abstract.py  interface.py
src/nestifypy/patterns/: __init__.py  core.py
src/nestifypy/promise/: __init__.py
src/nestifypy/pyunix/: scene.py  sprite.py
src/nestifypy/scheduler/: __init__.py  scheduler.py
src/nestifypy/slogger/: __init__.py  slogger.py
src/nestifypy/trying/: __init__.py
tests/: test_collections.py  test_database.py  test_ensure.py  test_env.py  test_input.py  test_json.py  test_komodo.py  test_loom.py  test_math.py  test_nestify.py  test_net.py  test_oop.py  test_os.py  test_promise.py  test_pyunix.py  test_scheduler.py  test_text.py  test_trying.py  test_yaml.py  test_yaml_namespace.py
tools/: sync.py
(+34 files in other folders)
