[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arkhe"
dynamic = ["version"]
description = "A modern modular framework for Python featuring configuration management, networking, mathematical computing, concurrency, game development, and fluent developer APIs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "rickmviana"}
]
keywords = [
  "framework",
  "utilities",
  "configuration",
  "yaml",
  "json",
  "env",
  "loom",
  "networking",
  "http",
  "math",
  "bigdecimal",
  "bignumber",
  "promise",
  "scheduler",
  "async",
  "concurrency",
  "logging",
  "collections",
  "cli",
  "console",
  "input",
  "game",
  "pygame",
  "ecs",
  "dependency-injection",
  "fluent-api",
  "developer-tools"
]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Operating System :: OS Independent",

    "Environment :: Console",

    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",

    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",

    "Topic :: Scientific/Engineering :: Mathematics",

    "Topic :: System :: Logging",
    "Topic :: System :: Systems Administration",

    "Topic :: Utilities",

    "Topic :: Games/Entertainment",

    "Typing :: Typed"
]

dependencies = [
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "watchdog>=4.0",
  "pygame>=2.6.1",
  "fastapi[standard]>=0.136.3",
]

[project.optional-dependencies]
game = ["pygame>=2.5"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.10",
  "black>=24.0"
]
math = [
  "sympy>=1.12"
]

[project.urls]
Homepage = "https://github.com/nadezhdkov/arkhe"
Repository = "https://github.com/nadezhdkov/arkhe"
"Bug Tracker" = "https://github.com/nadezhdkov/arkhe/issues"

[project.scripts]
arkhe = "arkhe.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "arkhe.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["arkhe*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
arkhe = [
    "py.typed",
    "**/*.pyi",
    "komodo/*.pyi"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["UP006", "UP007", "E501"] # Keep standard typing for now

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
reportGeneralTypeIssues = true
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportPrivateImportUsage = false
stubPath = "src/arkhe"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=arkhe --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "except ImportError:"
]

[dependency-groups]
dev = [
    "build>=1.5.0",
    "twine>=6.2.0",
]
