[project]
name = "arkhe-workspace"
version = "0.1.0"
description = "Arkhe modular framework workspace root"
requires-python = ">=3.10"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.10",
  "pyright>=1.1.3",
  "build>=1.5.0",
  "twine>=6.2.0"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["UP006", "UP007", "E501"] # Keep standard typing for now

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
reportGeneralTypeIssues = true
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportPrivateImportUsage = false
stubPath = "src/arkhe"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=arkhe --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "except ImportError:"
]



[tool.uv.sources]
arkhe-core = { workspace = true }
arkhe-config = { workspace = true }
arkhe-net = { workspace = true }
arkhe-math = { workspace = true }
arkhe-game = { workspace = true }
arkhe-web = { workspace = true }
arkhe-os = { workspace = true }
arkhe-log = { workspace = true }
arkhe-scheduler = { workspace = true }
arkhe-db = { workspace = true }
arkhe-meta = { workspace = true }
